samples/_failures_safe/1761280305_12ed9f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_14bb0054.c: In function ‘main’:
./samples/SAFE/__tmp_14bb0054.c:153:37: error: expected ‘;’ at end of input
  153 |             result = allocate_matrix
      |                                     ^
      |                                     ;
./samples/SAFE/__tmp_14bb0054.c:153:13: error: expected declaration or statement at end of input
  153 |             result = allocate_matrix
      |             ^~~~~~
./samples/SAFE/__tmp_14bb0054.c:153:13: error: expected declaration or statement at end of input
